# Interactive_ARAP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  runtime_measurement.csv
Meshes/: ex.off
include/: ARAP_iteration.h  cotangent_weight_matrix.h  main.h  one_iteration.h  rotation_matrix.h  sample.h  system_matrix.h
src/: ARAP_iteration.cpp  cotangent_weight_matrix.cpp  main.cpp  main.h  one_iteration.cpp  rotation_matrix.cpp  system_matrix.cpp
